vyřešení errorů po ošetření inputů